clusters/sas-test-aks/sas-test-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld
  namespace: default
spec:
  nodeSelector:
    type: user-node
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld
  template:
    metadata:
      labels:
        app: aks-helloworld
    spec:
      containers:
      - name: aks-helloworld
        image: sasaksacrtest.azurecr.io/sas-test-app:1.1.8 # {"$imagepolicy": "flux-system:sas-test-app"}
        ports:
        - name: http
          containerPort: 3000
        resources:
          requests:
            memory: "2048Mi"
            cpu: "250m"
          limits:
            memory: "2560Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  type: LoadBalancer
  selector:
    app: aks-helloworld
