clusters/sas-test-aks/sas-test-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  type: LoadBalancer
  selector:
    app: aks-helloworld
