clusters/sas-test-aks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver-v2-secure
  namespace: default
  annotation:
    nginx.ingress.kubernetes.io/rewrite-targer: /$2
spec:
  ingressClassName: external-nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: aks-helloworld
                port:
                  number: 80
